--- a/style.css
+++ b/style.css
@@ -67,3 +67,30 @@ div.container.map {
 div.carousel-item {
   height: 30rem;
 }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 3.5rem;
+  color: black;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 3.5rem;
+  color: black;
+}
+
+div.card {
+  height: 36rem;
+}
