--- a/style.css
+++ b/style.css
@@ -91,6 +91,23 @@ div.carousel-item {
   color: black;
 }
 
-div.card {
-  height: 36rem;
+img.card-img-top {
+  object-fit: cover;
+}
+
+img.card-img-top:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}
+
+.square {
+    float:left;
+    position: relative;
+    width: 97%;
+    padding-bottom : 97%; /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+    background-position:center center;
+    background-repeat:no-repeat;
+    background-size:cover; /* you change this to "contain" if you don't want the images to be cropped */
 }
