--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ html {
   letter-spacing: 1px;
   font-size: 4.5rem;
   text-align: center;
+  background-color: rgba(255,255,255,0.4);
 }
 
 .sub.title {
@@ -110,4 +111,8 @@ img.card-img-top:after {
     background-position:center center;
     background-repeat:no-repeat;
     background-size:cover; /* you change this to "contain" if you don't want the images to be cropped */
+}
+
+.hidden {
+  display: none;
 }
