--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html {
   max-height: 30rem;
   padding-top: 6.25rem;
   padding-bottom: 3rem;
-  background-image: url('./img/header_background.png');
+  background-image: url('./img/main_background.png');
   
 }
 
