--- a/virtual-museum/styles/clear.css
+++ b/virtual-museum/styles/clear.css
@@ -1,19 +1,19 @@
 @font-face {
 	font-family: "TT Hoves";
-	src: local("../fonts/TT Hoves Regular"), local("TT-Hoves-Regular"),
-		url("../fonts/TTHoves-Regular.woff2") format("woff2"),
-		url("../fonts/TTHoves-Regular.woff") format("woff"),
-		url("../fonts/TTHoves-Regular.ttf") format("truetype");
+	src: local("../fonts/TT-Hoves-Pro-Regular"), local("TT-Hoves-Regular"),
+		url("../fonts/TT-Hoves-Pro-Regular.ttf") format("truetype"),
+		url("../fonts/TT_Hoves_Pro_Regular.woff2") format("woff2"),
+		url("../fonts/TT_Hoves_Pro_Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "TT Hoves";
-	src: local("../fonts/TT Hoves Medium"), local("TT-Hoves-Medium"),
-		url("../fonts/TTHoves-Medium.woff2") format("woff2"),
-		url("../fonts/TTHoves-Medium.woff") format("woff"),
-		url("../fonts/TTHoves-Medium.ttf") format("truetype");
+	src: local("../fonts/TT-Hoves-Pro-Medium"), local("TT-Hoves-Medium"),
+		url("../fonts/TT-Hoves-Pro-Medium.ttf") format("truetype"),
+		url("../fonts/TT_Hoves_Pro_Medium.woff2") format("woff2"),
+		url("../fonts/TT_Hoves_Pro_Medium.woff") format("woff");
 	font-weight: 500;
 	font-style: normal;
 }
