--- a/virtual-museum/styles/main.css
+++ b/virtual-museum/styles/main.css
@@ -200,7 +200,6 @@
 	/* height: 376px; */
 	padding: 152px 30px 40px;
 	border-radius: 10px;
-	overflow: hidden;
 }
 
 .simplecard--type1 {
@@ -247,6 +246,7 @@
 	width: 94px;
 	height: 94px;
 	object-fit: contain;
+	z-index: 3;
 }
 
 .simplecard__num--mobile {
@@ -256,6 +256,7 @@
 .simplecard.simplecard--easy {
 	height: auto;
 	padding: 115px 30px 54px;
+	overflow: hidden;
 }
 
 .simplecard.simplecard--easy .simplecard__title {
