--- a/virtual-museum/styles/clear.css
+++ b/virtual-museum/styles/clear.css
@@ -18,6 +18,33 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: "Open Sans";
+	src: local("../fonts/OpenSans-Regular"), local("OpenSans-Regular"),
+		url("../fonts/OpenSans-Regular.ttf") format("truetype"),
+		url("../fonts/OpenSans-Regular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: local("../fonts/OpenSans-SemiBold"), local("OpenSans-SemiBold"),
+		url("../fonts/OpenSans-SemiBold.ttf") format("truetype"),
+		url("../fonts/OpenSans-SemiBold.woff") format("woff");
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Open Sans";
+	src: local("../fonts/OpenSans-Bold"), local("OpenSans-Bold"),
+		url("../fonts/OpenSans-Bold.ttf") format("truetype"),
+		url("../fonts/OpenSans-Bold.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
+}
+
 * {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
