--- a/virtual-museum/styles/excursion-page.css
+++ b/virtual-museum/styles/excursion-page.css
@@ -60,9 +60,7 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%) rotate(90deg);
-	margin-top: -2px;
-	margin-right: -2px;
+	transform: translate(-50%, -50%);
 }
 
 .player .play.topause {
@@ -121,14 +119,14 @@
 }
 
 .excursion__title {
-	font-size: 60px;
+	font-size: 50px;
 	font-weight: 600;
-	line-height: 120%;
+	line-height: 110%;
 	margin-bottom: 20px;
 }
 
 .excursion__maintext {
-	font-size: 26px;
+	font-size: 22px;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 120%;
@@ -139,16 +137,18 @@
 	margin-top: 40px;
 }
 
-.hero .anchor {
-	position: absolute;
+.mainanchor {
+	position: fixed;
 	left: 50%;
 	bottom: 40px;
 	transform: translateX(-50%);
 	transition: 300ms ease-in;
 	color: rgba(0, 0, 0, 0.3);
+	z-index: 99;
+	cursor: pointer;
 }
 
-.hero .anchor:hover {
+.main.anchor:hover {
 	color: rgba(0, 0, 0, 0.8);
 }
 
@@ -199,6 +199,11 @@
 	.mobile {
 		display: block;
 	}
+	.overlay svg {
+		width: 32px;
+		height: 32px;
+		object-fit: contain;
+	}
 	.exit {
 		top: 20px;
 		left: 20px;
@@ -220,13 +225,10 @@
 		top: 8px;
 		right: 20px;
 	}
-	.player .overlay {
-		width: 36px;
-		height: 36px;
+	.player svg {
+		width: 32px;
+		height: 32px;
 		margin: 0;
-	}
-	.player .overlay .desktop {
-		display: none;
 	}
 
 	.player .player__btn {
@@ -238,11 +240,6 @@
 		justify-content: center;
 		margin-right: -2px;
 	}
-	.player .play svg {
-		width: 10px;
-		object-fit: contain;
-	}
-
 	.excursion__title {
 		font-size: 28px;
 		margin-bottom: 10px;
@@ -261,7 +258,7 @@
 		max-width: calc(100% - 40px);
 	}
 
-	.anchor {
+	.mainanchor {
 		display: none;
 	}
 	.infoblock {
@@ -396,10 +393,10 @@
 		line-height: 120%;
 		letter-spacing: -0.12px;
 		position: relative;
-		margin-top: -90px;
-		height: calc(100vh - 274px + 90px);
+		/* margin-top: -90px; */
+		height: calc(100vh - 274px);
 	}
-
+	/* 
 	.double--gallery .double__content::before {
 		content: " ";
 		position: sticky;
@@ -413,7 +410,7 @@
 			#fff 80.32%
 		);
 		top: 274px;
-	}
+	} */
 	.double__title {
 		font-size: 18px;
 		line-height: 100%;
@@ -476,7 +473,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: rgba(0, 0, 0, 0.4);
+	background: rgba(0, 0, 0, 0.5);
 	transition: 300ms ease-in-out;
 	opacity: 0;
 }
@@ -491,9 +488,10 @@
 }
 
 .textoverflowing {
-	max-height: 500px;
+	max-height: 450px;
 	overflow: scroll;
 	position: relative;
+	padding-bottom: 40px;
 }
 
 .onplay .textoverflowing {
@@ -516,6 +514,7 @@
 	position: absolute;
 	left: 40px;
 	bottom: 40px;
+	margin-bottom: 0;
 }
 .excursion__block .excursion__texts {
 	max-width: 680px;
@@ -600,6 +599,9 @@
 }
 
 @media (max-width: 1024px) {
+	.textoverflowing {
+		padding-bottom: 0;
+	}
 	.exc__player {
 		font-size: 12px;
 		font-weight: 500;
@@ -707,5 +709,83 @@
 		width: 40px;
 		height: 40px;
 		object-fit: contain;
+	}
+}
+
+.customoverflow-parent {
+	max-height: 400px;
+	overflow: hidden;
+	position: relative;
+}
+
+.customoverflow-parent .customoverflow {
+	max-height: 400px;
+	overflow: scroll;
+}
+
+.customoverflow-parent.isview {
+	mask-image: url(../images/textmask.svg);
+}
+
+.customoverflow-parent::before {
+	content: " ";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 40px;
+	background: linear-gradient(to top, #fff, transparent);
+	transition: 200ms ease-in;
+	transform: translateY(100%);
+}
+
+.customoverflow-parent.isview::before {
+	transform: translateY(0%);
+	opacity: 1;
+}
+
+.excursion__block--panoram .customoverflow-parent::before {
+	display: none;
+}
+
+.excursion__block--panoram.onread::before,
+.excursion__block--panoram.onread::after {
+	opacity: 1;
+}
+
+.excursion__block--panoram.onread .watch {
+	opacity: 0;
+}
+
+.excursion__block--panoram .customoverflow-parent,
+.excursion__block--panoram .customoverflow {
+	max-height: 70vh;
+}
+.excursion__block--panoram .customoverflow-customoverflow {
+	padding-bottom: 22px;
+}
+
+@media (max-width: 768px) {
+	.customoverflow-parent,
+	.customoverflow-parent .customoverflow {
+		max-height: 100%;
+	}
+
+	.excursion__block--panoram .customoverflow-parent {
+		max-height: 100%;
+	}
+	.excursion__block.onplay .textoverflowing {
+		max-height: 400px;
+	}
+
+	.excursion__block--panoram .excursion__texts {
+		max-height: 60vh;
+		overflow: scroll;
+		mask-image: url(../images/textmask.svg);
+	}
+
+	.excursion__block--panoram .customoverflow,
+	.excursion__block--panoram .customoverflow-parent {
+		mask-image: none;
 	}
 }
