--- a/сargrad/styles/header.css
+++ b/сargrad/styles/header.css
@@ -1,142 +1,181 @@
 .header {
-  position: fixed;
-  top: 32px;
-  max-width: 1312px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 4px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: rgba(255, 255, 255, 0.7);
-  z-index: 99;
-  width: calc(100% - 60px);
-  border-radius: 10px;
-  backdrop-filter: blur(20px);
-  height: 64px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	padding: 18px 0 0;
+	height: 80px;
+	z-index: 99;
+	width: 100%;
+	font-size: 16px;
+	isolation: isolate;
+	transition: 500ms ease-in;
+
+	transform: translateY(-100%);
 }
 
-.logo img {
-  height: 38px;
-  object-fit: contain;
-  object-position: left center;
+.header.scrolled {
+	transform: translateY(0);
+}
+
+.header a {
+	color: #ffffff;
+	text-decoration: none;
+}
+
+.header a:hover {
+	color: #ffffff;
+}
+
+.header__bg {
+	backdrop-filter: blur(20px);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(92, 59, 35, 0.4);
+	z-index: -1;
+}
+
+.header__container {
+	max-width: calc(1230px + 40px);
+	padding: 0 20px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	height: 100%;
 }
 
 .nav {
-  display: flex;
-  align-items: center;
-  gap: 64px;
+	display: flex;
+	gap: 88px;
+	width: 598px;
 }
 
-.nav__item {
-  position: relative;
+.header__logo {
+	width: 126px;
+	margin-bottom: 20px;
+}
+.header__logo img {
+	width: 100%;
+	height: auto;
+	object-fit: contain;
 }
 
-.nav__item::before {
-  content: " ";
-  width: 1px;
-  height: 24px;
-  background: #808080;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: -33px;
+.nav__text {
+	color: #ffffff;
+	cursor: pointer;
+	padding-bottom: 18px;
 }
 
-.nav li:nth-child(1) .nav__item::before {
-  display: none;
+.nav__dropping {
+	position: fixed;
+	top: 79px;
+	left: 0;
+	width: 100%;
+	transition: 200ms ease-in;
+	border-top: 1px solid rgba(245, 245, 245, 0.5);
+	padding: 36px 0 48px;
+	background: rgba(92, 59, 35, 0.4);
+	backdrop-filter: blur(20px);
+	opacity: 0;
+	pointer-events: none;
 }
 
-.ham {
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-transition: -webkit-transform 400ms;
-  transition: transform 400ms;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  display: none;
-  position: absolute;
-  top: 4px;
-  right: 10px;
+.nav__link:hover > .nav__dropping {
+	transform: translateY(0);
+	pointer-events: all;
+	opacity: 1;
 }
 
-.hamRotate.active {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+.nav__droppingcontent {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
 }
 
-.line {
-  fill: none;
-  -webkit-transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-  stroke: #000;
-  stroke-width: 5;
-  stroke-linecap: round;
+.nav__droppingcontent--first {
+	width: 330px;
+	margin-left: auto;
+	width: 598px;
 }
 
-.ham4 .top {
-  stroke-dasharray: 40 121;
+.nav__droppingcontent--last {
+	margin-left: auto;
+	width: 272px;
+	margin-right: -30px;
 }
 
-.ham4 .bottom {
-  stroke-dasharray: 40 121;
+.nav__sublink {
+	position: relative;
+	padding-left: 15px;
 }
 
-.ham4.active .top {
-  stroke-dashoffset: -68px;
+.nav__sublink::before {
+	content: " ";
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	width: 5px;
+	height: 5px;
+	border-radius: 50%;
+	background: #fff;
 }
 
-.ham4.active .bottom {
-  stroke-dashoffset: -68px;
-}
-
+.nav--btn,
 .nav--mobile {
-  display: none;
+	display: none;
 }
+@media (max-width: 1024px) {
+	.nav {
+		display: none;
+	}
+	.nav--btn {
+		display: block;
+		position: absolute;
+		top: 55%;
+		right: 20px;
+		transform: translateY(-50%);
+	}
+	.header {
+		height: 78px;
+		padding: 34px 0 20px;
+	}
+	.header__logo {
+		margin: 0;
+		width: 118px;
+	}
 
-.nav--mobile a {
-  display: block;
-  text-transform: uppercase;
-  font-size: 12px;
-  padding: 16px 0;
-}
+	.nav__text {
+		padding-bottom: 0;
+	}
 
-.nav--mobile a.active {
-  border-bottom: 1px solid #e0e0e0;
-}
+	.nav--mobile {
+		position: fixed;
+		top: 78px;
+		min-height: calc(100vh - 78px);
+		padding: 60px 20px;
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+		border-top: 1px solid rgba(245, 245, 245, 0.5);
+		background: rgba(92, 59, 35, 0.4);
+		backdrop-filter: blur(20px);
+		width: 100%;
 
-@media (max-width: 768px) {
-  .ham {
-    display: block;
-  }
-  .header {
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
-    background: #fff;
-    width: 100%;
-    height: 48px;
-    padding: 0 10px;
-  }
+		display: none;
+	}
 
-  .logo img {
-    height: 30px;
-  }
-  .nav {
-    display: none;
-  }
-
-  .nav--mobile {
-    position: fixed;
-    top: 48px;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    padding: 40px 10px;
-    height: calc(100vh - 20px);
-  }
+	.navmobile__linkcontent {
+		margin: 40px 0;
+		padding: 40px 0;
+		border-top: 1px solid rgba(245, 245, 245, 0.5);
+		border-bottom: 1px solid rgba(245, 245, 245, 0.5);
+		display: flex;
+		flex-direction: column;
+		gap: 26px;
+		display: none;
+	}
 }
