--- a/сargrad/styles/article.css
+++ b/сargrad/styles/article.css
@@ -141,3 +141,105 @@ p {
 		display: block;
 	}
 }
+
+.inforow__wrapper {
+	max-width: 585px;
+	margin-top: 22px;
+	margin-bottom: 32px;
+	font-size: 16px;
+	display: flex;
+	flex-direction: column;
+	gap: 28px;
+}
+
+.gallery__wrapper {
+	margin: 0 auto;
+	padding: 0 20px;
+	max-width: calc(1080px + 40px);
+}
+
+.gallery__grid {
+	display: grid;
+	grid-template-columns: 1fr 160px;
+	gap: 20px;
+}
+.gallery__asiderow {
+	display: flex;
+	flex-direction: column;
+	max-height: 506px;
+	overflow: scroll;
+	gap: 12px;
+}
+.gallery__left {
+	overflow: hidden;
+}
+
+.gallery__main {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.gallery__asiderow .project__galitem {
+	height: 100px;
+	flex: 1 0 100px;
+}
+
+.panoramtitle {
+	margin: 64px 0 50px;
+	font-size: 22px;
+	font-weight: 400;
+}
+
+.widepic + .footer {
+	margin-top: 0;
+}
+
+.widepic__innerpage {
+	max-height: 766px;
+}
+@media (max-width: 1024px) {
+	.gallery__asiderow {
+		max-height: 356px;
+	}
+	.gallery__asiderow .project__galitem {
+		height: 105px;
+		flex: 1 0 105px;
+	}
+	.gallery__asiderow {
+		gap: 20px;
+	}
+	.panoramtitle {
+		margin: 40px 0 80px;
+	}
+	.inforow__wrapper {
+		gap: 20px;
+		margin: 20px 0;
+	}
+}
+
+@media (max-width: 740px) {
+	.gallery__grid {
+		grid-template-columns: 1fr;
+		gap: 20px;
+	}
+	.gallery__left {
+		margin: 0 -20px;
+		width: calc(100% + 40px);
+	}
+	.gallery__asiderow {
+		gap: 16px;
+		flex-direction: row;
+		overflow: hidden;
+	}
+	.gallery__asiderow .project__galitem {
+		height: 72px;
+		flex: 1 0 96px;
+		width: 96px;
+	}
+	.panoramtitle {
+		font-size: 18px;
+		line-height: 110%;
+		margin: 40px 0 60px;
+	}
+}
