--- a/сargrad/styles/publications.css
+++ b/сargrad/styles/publications.css
@@ -4,6 +4,15 @@
 	gap: 24px;
 }
 
+.publications__container.catalog {
+	/* margin-top: 90px; */
+	margin: 90px -40px 0;
+	width: calc(1360px + 80px);
+	max-width: 100vw;
+	padding-left: 45px;
+	padding-right: 2px;
+}
+
 .publication__tab {
 	display: flex;
 	align-items: center;
@@ -30,8 +39,20 @@
 	display: none;
 }
 
+.catalog__grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 80px 0;
+	max-width: auto;
+	display: none;
+}
+
 .publications__list.active {
 	display: flex;
+}
+
+.catalog__grid.active {
+	display: grid;
 }
 
 .publication__item {
@@ -86,6 +107,36 @@
 }
 
 @media (max-width: 1024px) {
+	.catalog__grid {
+		gap: 20px 10px;
+		margin: 20px 0 40px;
+	}
+	.catalog__grid .tabslider__item {
+		height: 450px;
+		font-size: 16px;
+	}
+
+	.publications__container.catalog {
+		margin: 66px auto 0;
+		padding: 0;
+		width: 100%;
+		max-width: 100%;
+	}
+
+	.catalog__grid .tabslider__content {
+		font-size: 16px;
+		padding: 11px;
+		padding-bottom: 40px;
+	}
+
+	.tabslider__content .capuccio {
+		font-size: 16px;
+	}
+
+	.catalog__grid .tabslider__picture {
+		height: 280px;
+	}
+
 	.publications__container .desktop {
 		display: none;
 	}
@@ -117,6 +168,9 @@
 	.active + .publications__list {
 		display: flex;
 	}
+	.active + .catalog__grid {
+		display: grid;
+	}
 	.publication__tab .arrow {
 		opacity: 1;
 		display: block;
@@ -135,6 +189,26 @@
 }
 
 @media (max-width: 740px) {
+	.breadcrumb {
+		margin-right: 0;
+	}
+	.publications__container.catalog {
+		margin-top: 40px;
+	}
+	.catalog__grid {
+		grid-template-columns: 1fr;
+		gap: 20px;
+	}
+	.catalog__grid .tabslider__item {
+		width: 100%;
+		height: fit-content;
+	}
+	.catalog__grid .tabslider__picture {
+		height: 480px;
+	}
+	.catalog__grid .tabslider__content {
+		padding: 20px 20px 40px;
+	}
 	.publication__tab {
 		padding: 14px 16px 14px 20px;
 		height: 52px;
