--- a/virtual-museum/styles/main.css
+++ b/virtual-museum/styles/main.css
@@ -75,13 +75,36 @@
 	font-size: 32px;
 	line-height: 1.2;
 }
+@media (max-width: 1366px) {
+	.topslider__content {
+		left: 30px;
+	}
+	.topslider__item.slick-slide,
+	.hero {
+		height: 418px;
+		min-height: 418px;
+	}
+	.topslider__title {
+		font-size: 60px;
+		margin-bottom: 10px;
+		line-height: 110%;
+	}
+	.topslider__text {
+		font-size: 24px;
+	}
+}
 
 @media (max-width: 768px) {
 	.hero + .section {
-		margin-top: 12px;
+		margin-top: 60px;
 	}
 	.topslider__item.slick-slide {
-		height: calc(100vh - 48px);
+		/* height: calc(100vh - 48px); */
+		height: 480px;
+	}
+	.hero {
+		height: 480px;
+		min-height: 480px;
 	}
 	.slick-dots {
 		gap: 6px;
@@ -96,7 +119,7 @@
 	}
 
 	.topslider__content {
-		left: 10px;
+		left: 15px;
 		bottom: 42px;
 		max-width: 320px;
 	}
@@ -125,6 +148,18 @@
 	margin: 0 auto;
 }
 
+@media (max-width: 1366px) {
+	.container {
+		padding: 0 30px;
+	}
+}
+
+@media (max-width: 768px) {
+	.container {
+		padding: 0 10px;
+	}
+}
+
 .title__btned {
 	display: flex;
 	align-items: flex-start;
@@ -136,6 +171,22 @@
 @media (min-width: 1024px) {
 	.title__content {
 		max-width: 844px;
+	}
+	.title__btned {
+		margin-bottom: 60px;
+	}
+}
+
+@media (max-width: 1024px) {
+	.title__btned.tocol {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+	}
+
+	.title__btned.tocol button {
+		width: fit-content;
+		margin-left: auto;
 	}
 }
 
@@ -152,19 +203,18 @@
 	.description {
 		font-size: 16px;
 		line-height: 120%;
-		letter-spacing: -0.32px;
+		/* letter-spacing: -0.32px; */
 	}
 	.title__btned {
 		gap: 20px;
 		flex-direction: column;
-		margin-bottom: 60px;
 	}
 	.title__btned .h2 {
 		margin-bottom: 10px;
 		font-size: 20px;
 		font-weight: 500;
 		line-height: 100%;
-		letter-spacing: -0.4px;
+		/* letter-spacing: -0.4px; */
 	}
 }
 
@@ -186,15 +236,17 @@
 	.collection__dropdowns {
 		grid-template-columns: repeat(2, 1fr);
 	}
+	.grid--region {
+		grid-template-columns: repeat(2, 1fr);
+		margin-top: 20px;
+		gap: 18px;
+	}
 }
 
 @media (max-width: 700px) {
 	.grid3 {
 		grid-template-columns: 1fr;
 		gap: 10px;
-	}
-	.grid--region {
-		margin-top: 20px;
 	}
 }
 
@@ -294,6 +346,9 @@
 @media (max-width: 1024px) {
 	.simplecard {
 		font-size: 14px;
+
+		min-height: 176px;
+		padding: 78px 15px 18px;
 	}
 	.simplecard.simplecard--easy .simplecard__title {
 		padding-right: 0;
@@ -305,14 +360,14 @@
 		padding: 72px 12px 26px;
 	}
 	.simplecard__num {
-		width: 60px;
-		height: 60px;
-		top: -1px;
-		left: -1px;
+		display: none;
+		width: 48px;
+		height: 48px;
+		top: -2px;
+		left: -2px;
 	}
-	.simplecard .decor {
-		width: 90px;
-		height: 90px;
+	.simplecard__num--mobile {
+		display: block;
 	}
 }
 
@@ -324,16 +379,6 @@
 	.simplecard__title {
 		margin-bottom: 10px;
 		font-size: 20px;
-	}
-	.simplecard__num {
-		display: none;
-		width: 48px;
-		height: 48px;
-		top: -2px;
-		left: -2px;
-	}
-	.simplecard__num--mobile {
-		display: block;
 	}
 
 	.simplecard.yandex {
@@ -505,6 +550,9 @@
 }
 
 @media (max-width: 1024px) {
+	.swiper--exc .swiper-slide-active .swiper__content {
+		width: 100%;
+	}
 	.swiper--exc.swiper {
 		display: none;
 	}
@@ -624,7 +672,7 @@
 		height: 378px;
 	}
 	.video__play {
-		width: 55px;
+		width: 67px;
 	}
 }
 
@@ -635,6 +683,9 @@
 @media (max-width: 700px) {
 	.title--margined {
 		margin-bottom: 20px;
+	}
+	.video__play {
+		width: 55px;
 	}
 }
 
@@ -850,7 +901,7 @@
 .another__title {
 	font-size: 32px;
 	line-height: 120%;
-	letter-spacing: -0.64px;
+	/* letter-spacing: -0.64px; */
 	margin-bottom: 22px;
 }
 
@@ -902,7 +953,7 @@
 
 @media (max-width: 1024px) {
 	.another__title {
-		font-size: 16px;
+		font-size: 18px;
 		margin-bottom: 14px;
 	}
 	.another__text {
@@ -992,7 +1043,7 @@
 		font-size: 16px;
 		padding-right: 165px;
 		margin-bottom: 22px;
-		letter-spacing: -0.32px;
+		/* letter-spacing: -0.32px; */
 	}
 	.contacts__decor {
 		width: 190px;
@@ -1262,7 +1313,8 @@
 
 @media (min-width: 1024px) {
 	.collection__content .collection__rowitem {
-		height: 22px;
+		height: 16px;
+		font-size: 6px;
 	}
 }
 
@@ -1302,7 +1354,7 @@
 
 .collection__title {
 	font-size: 24px;
-	letter-spacing: -0.48px;
+	/* letter-spacing: -0.48px; */
 }
 
 .collection__row {
@@ -1320,7 +1372,7 @@
 	text-transform: uppercase;
 	font-size: 8px;
 	height: 18px;
-	letter-spacing: -0.16px;
+	/* letter-spacing: -0.16px; */
 }
 
 .collection__rowitem.collection__rowitem--accent {
@@ -1333,9 +1385,9 @@
 }
 
 .collection__num {
-	border-radius: 4px;
+	border-radius: 3px;
 	background: #f7f7f7;
-	padding: 0 10px;
+	padding: 0 8px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1352,7 +1404,8 @@
 	overflow: hidden;
 	-webkit-line-clamp: 4;
 	margin-bottom: 38px;
-	letter-spacing: -0.6px;
+	font-size: 14px;
+	/* letter-spacing: -0.6px; */
 }
 
 .excurstion__card .collection__text {
@@ -1362,6 +1415,8 @@
 .collection__content.collection__content--promo {
 	justify-content: center;
 	padding: 0 66px;
+	border: 1px solid rgba(130, 130, 130, 0.6);
+	border-radius: 10px;
 }
 
 .collection__content--promo .collection__title {
@@ -1482,7 +1537,7 @@
 	.collection__text {
 		margin-bottom: 34px;
 		-webkit-line-clamp: 3;
-		letter-spacing: -0.24px;
+		/* letter-spacing: -0.24px; */
 	}
 	.excurstion__card.collection__text {
 		margin-bottom: 10px;
@@ -1652,6 +1707,7 @@
 		height: 258px;
 		border-radius: 10px;
 		overflow: hidden;
+		flex-shrink: 0;
 	}
 	.excurstion__cardcontent {
 		padding: 30px 14px 18px;
@@ -1756,9 +1812,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 0 15px;
+	padding: 0 64px;
 	box-sizing: border-box;
-	max-width: calc(1312px + 30px);
+	/* max-width: calc(1312px + 30px); */
 	left: 50%;
 	transform: translateX(-50%);
 }
@@ -1793,9 +1849,16 @@
 	border-radius: 10px;
 }
 
+@media (max-width: 1366px) {
+	.progressBarContainer {
+		padding: 0 30px;
+	}
+}
+
 @media (max-width: 700px) {
 	.progressBarContainer {
 		bottom: 20px;
+		padding: 0 15px;
 	}
 	.progressBarContainer div span.progressBar {
 		height: 2px;
@@ -1857,7 +1920,7 @@
 @keyframes showslide {
 	0% {
 		opacity: 0;
-		transform: translateX(20px);
+		transform: translateX(10px);
 	}
 	100% {
 		opacity: 1;
@@ -1869,11 +1932,11 @@
 	.another__slide.swiper-slide * {
 		opacity: 0;
 		transition: 100ms ease-out;
-		transform: translateX(20px);
+		transform: translateX(10px);
 	}
 
 	.swiper-slide-active.another__slide.swiper-slide * {
-		animation: showslide 1.5s linear;
+		animation: showslide 0.5s linear;
 		animation-fill-mode: both;
 	}
 }
